--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "deploy": "gh-pages -d dist --dotfiles"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.13.2",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest"
   },
